--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
+    "axios": "^1.8.4",
+    "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
